--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -4,6 +4,7 @@
 \documentclass[9pt]{sigplanconf}
 \toappear{}
 \usepackage[T1]{fontenc}
+\usepackage{times}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
@@ -63,7 +64,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \titlespacing*{\section}{0pt}{4pt}{2pt}
 \titlespacing*{\subsection}{0pt}{4pt}{2pt}
 \titlespacing*{\subsubsection}{0pt}{4pt}{2pt}
-\titlespacing*{\paragraph}{0pt}{4pt}{2pt}
+\titlespacing*{\paragraph}{0pt}{4pt}{3pt}
 \setlength{\skip\footins}{3pt plus 1px minus 5px}
 
 % known bug: http://tex.stackexchange.com/questions/1522/pdfendlink-ended-up-in-different-nesting-level-than-pdfstartlink
