--- a/macros.tex
+++ b/macros.tex
@@ -11,7 +11,7 @@
 \newcommand{\htau}{\dot{\tau}}
 \newcommand{\tarr}[2]{\inparens{#1 \rightarrow #2}}
 \newcommand{\tarrnp}[2]{#1 \rightarrow #2}
-\newcommand{\tnum}{\texttt{num}}
+\newcommand{\tnum}{\mathtt{num}}
 \newcommand{\tehole}{\llparenthesiscolor\rrparenthesiscolor}
 \newcommand{\tsum}[2]{\inparens{{#1} + {#2}}}
 
@@ -28,8 +28,8 @@
 \newcommand{\hehole}{\llparenthesiscolor\rrparenthesiscolor}
 \newcommand{\hhole}[1]{\llparenthesiscolor#1\rrparenthesiscolor}
 \newcommand{\hindet}[1]{\lceil#1\rceil}
-\newcommand{\hinj}[2]{\texttt{inj}_{#1}({#2})}
-\newcommand{\hcase}[5]{\texttt{case}({#1},{#2}.{#3},{#4}.{#5})}
+\newcommand{\hinj}[2]{\mathtt{inj}_{#1}({#2})}
+\newcommand{\hcase}[5]{\mathtt{case}({#1},{#2}.{#3},{#4}.{#5})}
 
 \newcommand{\hGamma}{\dot{\Gamma}}
 \newcommand{\domof}[1]{\text{dom}(#1)}
