fixed some bib entry formatting things

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,42 +1,22 @@
 % !TEX root = hazelnut-popl17.tex
 @inproceedings{Gordon:1978:MIP:512760.512773,
  author = {Gordon, M. and Milner, R. and Morris, L. and Newey, M. and Wadsworth, C.},
- title = {A Metalanguage for Interactive Proof in LCF},
- booktitle = {Proceedings of the 5th ACM SIGACT-SIGPLAN Symposium on Principles of Programming Languages},
- series = {POPL '78},
- year = {1978},
- location = {Tucson, Arizona},
- pages = {119--130},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/512760.512773},
- doi = {10.1145/512760.512773},
- acmid = {512773},
- publisher = {ACM},
- address = {New York, NY, USA},
+ title = {A Metalanguage for Interactive Proof in {LCF}},
+ booktitle = {POPL},
+ year = {1978}
 } 
 
 
 
-@article{Ziliani:2013:MMT:2544174.2500579,
- author = {Ziliani, Beta and Dreyer, Derek and Krishnaswami, Neelakantan R. and Nanevski, Aleksandar and Vafeiadis, Viktor},
- title = {Mtac: A Monad for Typed Tactic Programming in Coq},
- journal = {SIGPLAN Not.},
- issue_date = {September 2013},
- volume = {48},
- number = {9},
- month = sep,
- year = {2013},
- issn = {0362-1340},
- pages = {87--100},
- numpages = {14},
- url = {http://doi.acm.org/10.1145/2544174.2500579},
- doi = {10.1145/2544174.2500579},
- acmid = {2500579},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {coq, custom proof automation, interactive theorem proving, monads, tactics, typed meta-programming},
-} 
-
+@article{ziliani2015mtac,
+  title={Mtac: A monad for typed tactic programming in {Coq}},
+  author={Ziliani, Beta and Dreyer, Derek and Krishnaswami, Neelakantan R and Nanevski, Aleksandar and Vafeiadis, Viktor},
+  journal={Journal of Functional Programming},
+  volume={25},
+  pages={e12},
+  year={2015},
+  publisher={Cambridge Univ Press}
+}
 
 @book{bertot04book,
   Author = {Yves Bertot and Pierre Cast\'eran},
@@ -74,19 +54,8 @@
 @inproceedings{Marceau:2011:VGT:2016911.2016921,
  author = {Marceau, Guillaume and Fisler, Kathi and Krishnamurthi, Shriram},
  title = {Do Values Grow on Trees?: Expression Integrity in Functional Programming},
- booktitle = {Proceedings of the Seventh International Workshop on Computing Education Research},
- series = {ICER '11},
+ booktitle = {Proceedings of the Seventh International Workshop on Computing Education Research (ICER)},
  year = {2011},
- isbn = {978-1-4503-0829-8},
- location = {Providence, Rhode Island, USA},
- pages = {39--44},
- numpages = {6},
- url = {http://doi.acm.org/10.1145/2016911.2016921},
- doi = {10.1145/2016911.2016921},
- acmid = {2016921},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {programming for novices, structured editing},
 } 
 
 
@@ -100,18 +69,8 @@
 @inproceedings{Garcia:2016:AGT:2837614.2837670,
  author = {Garcia, Ronald and Clark, Alison M. and Tanter, \'{E}ric},
  title = {Abstracting Gradual Typing},
- booktitle = {Proceedings of the 43rd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
- series = {POPL '16},
+ booktitle = {POPL},
  year = {2016},
- isbn = {978-1-4503-3549-2},
- location = {St. Petersburg, FL, USA},
- pages = {429--442},
- numpages = {14},
- url = {http://doi.acm.org/10.1145/2837614.2837670},
- doi = {10.1145/2837614.2837670},
- acmid = {2837670},
- publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {abstract interpretation, gradual typing, subtyping},
 } 
 
@@ -119,18 +78,17 @@
 @inproceedings{Amorim:2016:PSC:2997364.2997374,
  author = {Amorim, Lu\'{\i}s Eduardo de Souza and Erdweg, Sebastian and Wachsmuth, Guido and Visser, Eelco},
  title = {Principled Syntactic Code Completion Using Placeholders},
- booktitle = {Proceedings of the 2016 ACM SIGPLAN International Conference on Software Language Engineering},
- series = {SLE 2016},
+ booktitle = {SLE},
  year = {2016},
- isbn = {978-1-4503-4447-0},
- location = {Amsterdam, Netherlands},
- pages = {163--175},
- numpages = {13},
- url = {http://doi.acm.org/10.1145/2997364.2997374},
- doi = {10.1145/2997364.2997374},
- acmid = {2997374},
- publisher = {ACM},
- address = {New York, NY, USA},
+ _isbn = {978-1-4503-4447-0},
+ _location = {Amsterdam, Netherlands},
+ _pages = {163--175},
+ _numpages = {13},
+ _url = {http://doi.acm.org/10.1145/2997364.2997374},
+ _doi = {10.1145/2997364.2997374},
+ _acmid = {2997374},
+ _publisher = {ACM},
+ _address = {New York, NY, USA},
  keywords = {Code Completion, IDEs, Language Workbenches},
 } 
 
@@ -157,16 +115,8 @@
                Eelco Visser},
   title     = {Providing rapid feedback in generated modular language environments:
                adding error recovery to scannerless generalized-LR parsing},
-  booktitle = {Proceedings of the 24th Annual {ACM} {SIGPLAN} Conference on Object-Oriented
-               Programming, Systems, Languages, and Applications, {OOPSLA} 2009,
-               October 25-29, 2009, Orlando, Florida, {USA}},
-  pages     = {445--464},
+  booktitle = {OOPSLA},
   year      = {2009},
-  url       = {http://doi.acm.org/10.1145/1640089.1640122},
-  doi       = {10.1145/1640089.1640122},
-  timestamp = {Fri, 30 Oct 2009 13:58:43 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/oopsla/KatsJNV09},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{DBLP:conf/sle/JongeNKV09,
@@ -175,13 +125,12 @@
                Lennart C. L. Kats and
                Eelco Visser},
   title     = {Natural and Flexible Error Recovery for Generated Parsers},
-  booktitle = {Software Language Engineering, Second International Conference, {SLE}
-               2009, Denver, CO, USA, October 5-6, 2009, Revised Selected Papers},
-  pages     = {204--223},
+  booktitle = {SLE},
+  _pages     = {204--223},
   year      = {2009},
-  timestamp = {Mon, 15 Mar 2010 12:22:10 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sle/JongeNKV09},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  _timestamp = {Mon, 15 Mar 2010 12:22:10 +0100},
+  _biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sle/JongeNKV09},
+  _bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{stefik2013empirical,
@@ -288,20 +237,9 @@ month={Sept},}
 
 @inproceedings{Lee:2007:TMM:1190216.1190245,
  author = {Lee, Daniel K. and Crary, Karl and Harper, Robert},
- title = {Towards a Mechanized Metatheory of Standard ML},
- booktitle = {Proceedings of the 34th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
- series = {POPL '07},
+ title = {Towards a Mechanized Metatheory of {Standard ML}},
+ booktitle = {POPL},
  year = {2007},
- isbn = {1-59593-575-4},
- location = {Nice, France},
- pages = {173--184},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/1190216.1190245},
- doi = {10.1145/1190216.1190245},
- acmid = {1190245},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {language definitions, logical frameworks, mechanized metatheory, standard ML, twelf, type safety},
 } 
 
 
@@ -734,7 +672,6 @@ _month={July}}
   _pages =	"81--92",
   _publisher =	"University of Chicago TR-2006-06",
   title =	"Gradual Typing for Functional Languages",
-  URL =  	"http://scheme2006.cs.uchicago.edu/13-siek.pdf",
   year = 	"2006",
 }
 
