--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -348,7 +348,7 @@ with a formal foundation upon which to build.
 
 \subsection{Tactics}
 
-Interactive proof refinement systems, e.g. those in LCF \cite{Gordon:1978:MIP:512760.512773}, and more recent typed tactic systems, e.g. Mtac for Coq \cite{Ziliani:2013:MMT:2544174.2500579}, 
+Interactive proof refinement systems, e.g. those in LCF \cite{Gordon:1978:MIP:512760.512773}, and more recent typed tactic systems, e.g. Mtac for Coq \cite{ziliani2015mtac}, 
 support an explicit model of a ``current'' typed hole that serves as the 
 target of program synthesis. Hazelnut differs in that edits can occur anywhere within a term.
 
@@ -523,7 +523,6 @@ systems, for we will not forever stay confined to mere strings of symbols.}
 \acks
 \input{acks.tex}
 
-\clearpage
 \balance
 \bibliographystyle{abbrvnat}
 % The bibliography should be embedded for final submission.
