--- a/formally.tex
+++ b/formally.tex
@@ -1177,9 +1177,9 @@ simplifies the statement of the constructability theorem, discussed next.
 To check that we have defined ``enough'' construct actions, we need to
 establish that we can start from an empty hole and arrive at any well-typed
 expression with the cursor on the outside. This simpler statement is
-sufficiently because Lemma \ref{lemma:reach-down} allows us to then move
-the cursor anywhere else inside the constructed term. As with reachability,
-we rely on the iterated action judgements defined in Figure
+sufficient because Lemma \ref{lemma:reach-down} allows us to then move the
+cursor anywhere else inside the constructed term. As with reachability, we
+rely on the iterated action judgements defined in Figure
 \ref{fig:multistep}.
 \begin{theorem}[Constructability]\label{thrm:constructability} ~
   \begin{enumerate}[itemsep=0px,partopsep=0px,topsep=0px]
