--- a/implementation.tex
+++ b/implementation.tex
@@ -43,11 +43,10 @@ We have developed a simple reference implementation, HZ, of Hazelnut extended wi
 order to reach a wide audience, we decided to implement HZ in the web
 browser.  To take advantage of a mature implementation of the FRP
 model, we chose to implement HZ using
-OCaml\footnote{\url{https://ocaml.org/}}, the \texttt{js\_of\_ocaml}
+OCaml\footnote{\url{https://ocaml.org/}}, the OCaml React
+library\footnote{\url{http://erratique.ch/software/react}}, and the \texttt{js\_of\_ocaml}
 compiler and associated libraries
-\cite{DBLP:conf/ml/Balat06}\footnote{\url{http://ocsigen.org/js\_of\_ocaml/}}
-and the OCaml React
-library\footnote{\url{http://erratique.ch/software/react}}.
+\cite{DBLP:conf/ml/Balat06}\footnote{\url{http://ocsigen.org/js\_of\_ocaml/}}. 
 
 The core semantics have
 been implemented in a functional style that follows the presentation in this paper closely.
