fixed awkward gaps

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -104,15 +104,15 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 {
  \begin{tabular}{ccc}
  	\begin{tabular}{c}
- $^1$Carnegie Mellon University (USA)\\
+ $^1$Carnegie Mellon University, USA\\
  \textsf{\hphantom{$^1$}\{comar, iev, aldrich\}@cs.cmu.edu}
  \end{tabular} & 
  \begin{tabular}{c}
- $^2$Oregon State University (USA)\\
+ $^2$Oregon State University, USA\\
  \textsf{\hphantom{$^1$}hiltonm@eecs.oregonstate.edu}
  \end{tabular} & 
   \begin{tabular}{c}
- $^3$University of Colorado Boulder (USA)\\
+ $^3$University of Colorado Boulder, USA\\
  \textsf{\hphantom{$^1$}matthew.hammer@colorado.edu}
  \end{tabular}
  \end{tabular}
