--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -297,6 +297,7 @@ analysis,~$\hcase{\hexp}{x}{\hexp_1}{y}{\hexp_2}$.
 }
 \end{equation}
 \end{subequations}
+\vspace{-3px}
 \caption{The construction \& zipper action rules for sums.}
 \label{fig:sum-action}
 }
@@ -372,6 +373,7 @@ analysis,~$\hcase{\hexp}{x}{\hexp_1}{y}{\hexp_2}$.
       {\zwsel{\hcase{{\hexp}}{x}{\hexp_1}{y}{\hexp_2}}}
 \end{array}
 \end{displaymath}
+\vspace{-3px}
 \caption{Movement actions for sums.}
 \label{fig:sum-move}
 \end{figure}
