--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,32 +29,26 @@
   Year = {2004},
   Bdsk-Url-1 = {http://www.labri.fr/publications/l3a/2004/BC04}}
 
+@inproceedings{odersky2001colored,
+  author    = {Martin Odersky and
+               Christoph Zenger and
+               Matthias Zenger},
+  title     = {Colored local type inference},
+  booktitle = {POPL},
+  year      = {2001},
+}
 
-@article{odersky2001colored,
-  title={Colored local type inference},
-  author={Odersky, Martin and Zenger, Christoph and Zenger, Matthias},
-  journal={ACM SIGPLAN Notices},
-  volume={36},
-  number={3},
-  pages={41--53},
-  year={2001},
-  publisher={ACM}
-}
-@inproceedings{dunfield2013complete,
-  title={Complete and easy bidirectional typechecking for higher-rank polymorphism},
-  author={Dunfield, Joshua and Krishnaswami, Neelakantan R},
-  booktitle={ACM SIGPLAN Notices},
-  volume={48},
-  number={9},
-  pages={429--442},
-  year={2013},
-  organization={ACM}
-}
+  @InProceedings{dunfield2013complete,
+    author =    {Joshua Dunfield and Neelakantan R. Krishnaswami},
+    title =     {Complete and Easy Bidirectional Typechecking for Higher-Rank Polymorphism},
+    booktitle = {ICFP},
+    year =      {2013},
+  }
 
 @inproceedings{Marceau:2011:VGT:2016911.2016921,
  author = {Marceau, Guillaume and Fisler, Kathi and Krishnamurthi, Shriram},
  title = {Do Values Grow on Trees?: Expression Integrity in Functional Programming},
- booktitle = {Proceedings of the Seventh International Workshop on Computing Education Research (ICER)},
+ booktitle = {Seventh International Workshop on Computing Education Research (ICER)},
  year = {2011},
 } 
 
@@ -62,7 +56,7 @@
 @inproceedings{sufrin1999modeless,
   title={Modeless structure editing},
   author={Sufrin, Bernard and De Moor, Oege},
-  booktitle={Proceedings of the Oxford-Microsoft symposium in Celebration of the work of Tony Hoare},
+  booktitle={Proceedings of the Oxford-Microsoft Symposium in Celebration of the work of Tony Hoare},
   year={1999}
 }
 
@@ -101,9 +95,6 @@
   number    = {3},
   pages     = {157--202},
   year      = {1982},
-  url       = {http://dx.doi.org/10.1016/0167-6423(82)90014-4},
-  doi       = {10.1016/0167-6423(82)90014-4},
-  timestamp = {Tue, 30 Aug 2011 17:13:45 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/scp/Sufrin82},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
@@ -114,7 +105,7 @@
                Emma Nilsson{-}Nyman and
                Eelco Visser},
   title     = {Providing rapid feedback in generated modular language environments:
-               adding error recovery to scannerless generalized-LR parsing},
+               adding error recovery to scannerless generalized-{LR} parsing},
   booktitle = {OOPSLA},
   year      = {2009},
 }
@@ -708,7 +699,7 @@ _month={July}}
 	_series = {{OpenSym} '15},
 	abstract = {A web-based tool for making and sharing research designed for authors, curators, and editors in the humanities is described, {\textless}u{\textgreater}editorsnotes.org{\textless}/u{\textgreater}. Notes are a varied genre not limited to annotations. The data for the tool is modeled as three kinds of records: Notes created; Documents cited; and Topics, headings for names and subjects. Structured records are needed for interoperability and sharing. Open access, sustainability issues, and how working notes can complement other infrastructure are discussed in a status report.},
 	pages = {11:1--11:4},
-	booktitle = {Proceedings of the 11th International Symposium on Open Collaboration},
+	booktitle = {11th International Symposium on Open Collaboration},
 	publisher = {{ACM}},
 	author = {Buckland, Michael K. and Golden, Patrick and Shaw, Ryan B.},
 	urldate = {2015-12-11},
@@ -727,7 +718,7 @@ _month={July}}
 	shorttitle = {{GNOME}},
 	abstract = {Structure editors have frequently been used as powerful and unifying interfaces for programming environments in computer science research settings. Few, however, have found their way into common use. {GNOME} is an attempt to channel the experience gained in the use of structure editing for software development environment research of the Gandalf Project into a practical novice programming environment. Based on a family of structure editors, it is currently being used to teach programming to undergraduates at Carnegie-Mellon University. This paper describes the {GNOME} environment, recounts lessons learned in adapting structure editors to novice programmers, and discusses its effectiveness as a teaching environment.},
 	_pages = {65--72},
-	booktitle = {Proceedings of the First {ACM} {SIGSOFT}/{SIGPLAN} Software Engineering Symposium on Practical Software Development Environments},
+	booktitle = {First {ACM} {SIGSOFT}/{SIGPLAN} Software Engineering Symposium on Practical Software Development Environments},
 	_publisher = {{ACM}},
 	author = {Garlan, David B. and Miller, Philip L.},
 	urldate = {2015-12-11},
@@ -766,7 +757,7 @@ _month={July}}
 	shorttitle = {Codelets},
 	abstract = {Programmers frequently use instructive code examples found on the Web to overcome cognitive barriers while programming. These examples couple the concrete functionality of code with rich contextual information about how the code works. However, using these examples necessitates understanding, configuring, and integrating the code, all of which typically take place after the example enters the user's code and has been removed from its original instructive context. In short, a user's interaction with an example continues well after the code is pasted. This paper investigates whether treating examples as "first-class" objects in the code editor - rather than simply as strings of text - will allow programmers to use examples more effectively. We explore this through the creation and evaluation of Codelets. A Codelet is presented inline with the user's code, and consists of a block of example code and an interactive helper widget that assists the user in understanding and integrating the example. The Codelet persists throughout the example's lifecycle, remaining accessible even after configuration and integration is done. A comparative laboratory study with 20 participants found that programmers were able to complete tasks involving examples an average of 43\% faster when using Codelets than when using a standard Web browser.},
 	pages = {2697--2706},
-	booktitle = {Proceedings of the {SIGCHI} Conference on Human Factors in Computing Systems},
+	booktitle = {{SIGCHI} Conference on Human Factors in Computing Systems},
 	publisher = {{ACM}},
 	author = {Oney, Stephen and Brandt, Joel},
 	urldate = {2015-12-11},
@@ -786,7 +777,7 @@ _month={July}}
 	shorttitle = {Structure Editing of Handwritten Mathematics},
 	abstract = {We present a structure editor that aims to facilitate the presentation and manipulation of handwritten mathematical expressions. The editor is oriented to the calculational mathematics involved in algorithmic problem solving and it provides features that allow reliable structure manipulation of mathematical formulae, as well as flexible and interactive presentations. We describe some of its most important features, including the use of gestures to manipulate algebraic formulae, the structured selection of expressions, definition and redefinition of operators in runtime, gesture's editor, and handwritten templates. The editor is made available in the form of a C\# class library which can be easily used to extend existing tools. For example, we have extended Classroom Presenter, a tool for ink-based teaching presentations and classroom interaction. We have tested and evaluated the editor with target users. The results obtained seem to indicate that the software is usable, suitable for its purpose and a valuable contribution to teaching and learning algorithmic problem solving.},
 	pages = {139--148},
-	booktitle = {Proceedings of the Ninth {ACM} International Conference on Interactive Tabletops and Surfaces},
+	booktitle = {Ninth {ACM} International Conference on Interactive Tabletops and Surfaces},
 	publisher = {{ACM}},
 	author = {Mendes, Alexandra and Backhouse, Roland and Ferreira, Joao F.},
 	urldate = {2015-12-11},
@@ -895,7 +886,7 @@ _month={July}}
 @inproceedings{Omar:2012:ACC:2337223.2337324,
  author = {Omar, Cyrus and Yoon, YoungSeok and LaToza, Thomas D. and Myers, Brad A.},
  title = {Active Code Completion},
- booktitle = {International Conference on Software Engineering (ICSE)},
+ booktitle = {ICSE},
  _series = {ICSE '12},
  year = {2012},
  _isbn = {978-1-4673-1067-3},
