ran the tex files through aspell and found a few minor typos

--- a/formally.tex
+++ b/formally.tex
@@ -816,7 +816,7 @@ check on our $\aMove{\dChildnm{n}}$ rules.
 
   \item If $\hsyn{\hGamma}{\hexp}{\htau}$ and $\removeSel{\zexp}=\hexp$
     then there exists some $\bar\alpha$ such that
-    $\bar\alpha~\mathsf{movements}$ nand
+    $\bar\alpha~\mathsf{movements}$ and
     $\performSynI{\hGamma}{\zwsel{\hexp}}{\htau}{\bar\alpha}{\zexp}{\htau}$.
 
   \item If $\hana{\hGamma}{\hexp}{\htau}$ and $\removeSel{\zexp}=\hexp$
