--- a/acks.tex
+++ b/acks.tex
@@ -3,4 +3,4 @@
 The authors would like to thank the anonymous referees at POPL and TFP 2016  for useful feedback on earlier drafts of this paper; Ed Morehouse and Carlo Angiuli for counsel on mechanization and Barendrecht's
 Convention; Vincent Zeng for \textit{pro bono} artistic services; and YoungSeok Yoon for reanalyzing the data from \cite{6883030}.
 %This is Danny Dig's COPE grant. He asked me to add the grant.
-This work was partially funded through a gift from Mozilla; the NSF grant \#CCF-1619282, 1553741 and 1439957; by AFRL and DARPA under agreement \#FA8750-16-2-0042; and by NSA lablet contract \#H98230-14-C-0140. The views and conclusions contained herein are those of the authors and should not be interpreted as necessarily representing the official policies or endorsements, either expressed or implied, of Mozilla, the NSF, AFRL, DARPA, the NSA or the U.S. Government.
+This work was partially funded through a gift from Mozilla; the NSF grant \#CCF-1619282, 1553741 and 1439957; by AFRL and DARPA under agreement \#FA8750-16-2-0042; and by NSA lablet contract \#H98230-14-C-0140. % The views and conclusions contained herein are those of the authors and should not be interpreted as necessarily representing the official policies or endorsements, either expressed or implied, of Mozilla, the NSF, AFRL, DARPA, the NSA or the U.S. Government.
