--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -3,8 +3,7 @@
 \RequirePackage{etex}
 \documentclass[9pt]{sigplanconf}
 \toappear{}
-\usepackage[T1]{fontenc}
-\usepackage{times}
+% \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
@@ -15,6 +14,7 @@
 \usepackage{wasysym}
 \usepackage{multicol}
 \usepackage{extarrows}
+
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \definecolor{light-gray}{gray}{0.9}
 \usepackage{soul}
@@ -32,6 +32,8 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \renewcommand{\MathparLineskip}{\lineskiplimit=.3\baselineskip\lineskip=.3\baselineskip plus .2\baselineskip}
 
 \usepackage{joshuadunfield}
+\usepackage{times}
+\usepackage{newtxtt}
 \usepackage{llproof}
 \usepackage{rulelinks}
 \newtheorem{theorem}{Theorem}
@@ -121,7 +123,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
  % \vspace{-12px}
 }
 \else
-\authorinfo{~}{~}{\vspace{-10px}}
+\authorinfo{~}{~}{~}
 \fi
 
 \maketitle
