--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -379,7 +379,7 @@ analysis,~$\hcase{\hexp}{x}{\hexp_1}{y}{\hexp_2}$.
 \end{figure}
 
 Next, we must correspondingly extend the syntax of Z-types and
-Z-expressions, following Huet's zipper pattern \cite{JFP::Huet1997}:\vspace{-3px}
+Z-expressions, following Huet's zipper pattern \cite{JFP::Huet1997}:\iftr \vspace{-11px} \else \vspace{-3px} \fi 
 \begin{grammar}
 $\mathsf{ZTyp}$ & $\ztau$ & \bnfas & $\cdots \bnfalt \tsum{\ztau}{\htau} \bnfalt \tsum{\htau}{\ztau}$
 \\
