--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -530,13 +530,13 @@ systems, for we will not forever stay confined to mere strings of symbols.}
 % The bibliography should be embedded for final submission.
 \bibliography{bibliography}
 
-% \iftr
-% \clearpage
-%\onecolumn
-% \appendix
-% \input{appendix}
-% \else
-% No Appendix Here
-% \fi
+\iftr
+\clearpage
+\onecolumn
+\appendix
+\input{appendix}
+\else
+No Appendix Here
+\fi
 
 \end{document}
