a little text to explain what's going on, first judgemental form

--- a/macros.tex
+++ b/macros.tex
@@ -119,3 +119,6 @@
 
 
 \newcommand{\inparens}[1]{{\color{gray}(}#1{\color{gray})}}
+
+%% rule names for appendix
+\newcommand{\rname}[1]{\textsc{#1}}
