--- a/appendix.tex
+++ b/appendix.tex
@@ -2,35 +2,41 @@
 
 \section{Hazelnut}
 The full collection of rules defining the semantics of Hazelnut are
-reproduced here in their definitional order for reference.
+reproduced here in their definitional order for reference, omitting only
+the rules for binary sums. The names given coincide with the corresponding
+constructors in the Agda formalization.
 \subsection{H-Types and H-Expressions}
 \subsubsection{Type Compatibility and Incompatibility}
 
 \noindent\fbox{$\tcompat{\htau}{\htau'}$}
 \begin{subequations}
-\begin{equation}
-\inferrule{ }{
-	\tcompat{\tehole}{\htau}
-}
-\end{equation}
-\begin{equation}
-\inferrule{ }{
-  \tcompat{\htau}{\tehole}
-}
-\end{equation}
-\begin{equation}
-\inferrule{ }{
-  \tcompat{\htau}{\htau}
-}
-\end{equation}
-\begin{equation}
-\inferrule{
-  \tcompat{\htau_1}{\htau_1'}\\
-  \tcompat{\htau_2}{\htau_2'}
-}{
-  \tcompat{(\tarr{\htau_1}{\htau_2})}{(\tarr{\htau_1'}{\htau_2'})}
-}
-\end{equation}
+  \begin{equation}
+    \tag{\rname{TCHole1}}
+    \inferrule{ }{
+      \tcompat{\htau}{\tehole}
+    }
+  \end{equation}
+  \begin{equation}
+    \tag{\rname{TCHole2}}
+    \inferrule{ }{
+      \tcompat{\tehole}{\htau}
+    }
+  \end{equation}
+  \begin{equation}
+    \tag{\rname{TCRefl}}
+    \inferrule{ }{
+      \tcompat{\htau}{\htau}
+    }
+  \end{equation}
+  \begin{equation}
+    \tag{\rname{TCArr}}
+    \inferrule{
+      \tcompat{\htau_1}{\htau_1'}\\
+      \tcompat{\htau_2}{\htau_2'}
+    }{
+      \tcompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
+    }
+  \end{equation}
 \end{subequations}
 
 \noindent\fbox{$\tincompat{\htau}{\htau'}$}
